--- a/TODO.txt
+++ b/TODO.txt
@@ -31,7 +31,7 @@ index.html
     
 
 ---------- EXTRAS ----------
-add backgroudn animations to the other pages
+add background animations to the other pages
 implement the logo to all pages
 create the creators page
 
