--- a/TODO.txt
+++ b/TODO.txt
@@ -21,6 +21,7 @@ DONE get the body of the post to display onclick of the title -- showAns()
 DONE setup on page load animations
 DONE background animations
 DONE implement the logo to all pages
+DONE add background animations to the other pages
 
 ---------- REQUIREMENTS ----------
 
@@ -32,6 +33,5 @@ index.html
     
 
 ---------- EXTRAS ----------
-add background animations to the other pages
-create the creators page
+finish the creators page
 
